welcome.lessons.welcome.bat.bool1.PosNeg.scala.error
posNeg:9: error: Boolean does not take parameters
  else (!negative){
                  ^